Add support for setting HTTP bodies.
Add set_http_request_body and set_http_response_body.

Add an example that shows how to use them.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,8 @@ crate-type = ["cdylib"]
 name = "http_headers"
 path = "examples/http_headers.rs"
 crate-type = ["cdylib"]
+
+[[example]]
+name = "http_body"
+path = "examples/http_body.rs"
+crate-type = ["cdylib"]
