review: update Rust before installing nightly.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,6 +75,7 @@ jobs:
 
     - name: Update Rust
       run: |
+        rustup update
         rustup toolchain install nightly
         rustup +nightly target add wasm32-unknown-unknown
         rustup +nightly component add clippy
