review: reinstall nightly.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -76,9 +76,7 @@ jobs:
     - name: Update Rust
       run: |
         rustup update
-        rustup component add clippy
-        rustup component add rustfmt
-        rustup component add rustfmt-preview
+        rustup toolchain remove nightly
         rustup toolchain install nightly
         rustup +nightly component add clippy
         rustup +nightly component add rustfmt
