--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Update Rust
       run: |
-        rustup update
+        rustup toolchain install stable --component clippy --component rustfmt
         rustup target add wasm32-unknown-unknown
 
     - name: Build
@@ -73,8 +73,8 @@ jobs:
 
     - name: Update Rust
       run: |
-        rustup toolchain install nightly
-        rustup target add --toolchain nightly wasm32-unknown-unknown
+        rustup toolchain install nightly --component clippy --component rustfmt
+        rustup +nightly target add wasm32-unknown-unknown
 
     - name: Build
       env:
