--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Build
       env:
         RUSTFLAGS: -C link-args=-S -D warnings
-      run: bazel build //...
+      run: cargo build --target=wasm32-unknown-unknown --release --all-targets
 
     - name: Format (clippy)
       env:
@@ -103,3 +103,44 @@ jobs:
 
     - name: Package (publish)
       run: cargo +nightly publish --dry-run --target=wasm32-unknown-unknown
+
+  bazel:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Mount Bazel cache
+      uses: actions/cache@v2
+      with:
+        path: "${HOME}/.cache/bazel"
+        key: bazel
+
+    - name: Install Bazelisk
+      run: |
+        curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.5.0/bazelisk-linux-amd64"
+        echo "605c4b417654a09febc7e15c6b802195fdd1c4fe8d876145fb15f10d4fa27b5b  bazelisk-linux-amd64" | sha256sum --check
+        mkdir -p "${HOME}/bin/"
+        mv bazelisk-linux-amd64 "${HOME}/bin/bazel"
+        chmod +x "${HOME}/bin/bazel"
+
+    - name: Build
+      run: |
+        "${HOME}/bin/bazel" build //...
+
+    - name: Format (buildifier)
+      run: |
+        go get -u github.com/bazelbuild/buildtools/buildifier
+        export PATH=$PATH:$(go env GOPATH)/bin
+        buildifier -mode=check WORKSPACE
+        buildifier -mode=check BUILD
+        buildifier -mode=check examples/BUILD
+
+    - name: Format (cargo raze)
+      run: |
+        cargo install cargo-raze
+        cp -p cargo/Cargo.lock .
+        rm -rf cargo/
+        cargo raze --output=cargo
+        mv Cargo.lock cargo/
+        git diff --exit-code
