review: pin Bazel cache to WORKSPACE and Cargo.lock files.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -114,7 +114,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: "${HOME}/.cache/bazel"
-        key: bazel
+        key: bazel-${{ hashFiles('WORKSPACE', 'cargo/Cargo.lock') }}
 
     - name: Build
       run: |
