review: cache test.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -118,7 +118,7 @@ jobs:
 
     - name: Build
       run: |
-        bazelisk build //...
+        bazelisk build -s //...
 
     - name: Format (buildifier)
       run: |
