review: cache test.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -119,6 +119,11 @@ jobs:
           ~/.cargo/registry
         key: test-${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'cargo/Cargo.lock') }}
 
+    - name: List cache
+      run: |
+          du -hs ~/.cache/bazel
+          du -hs ~/.cargo/*
+
     - name: Build
       run: |
         bazelisk build //...
