review: cache test.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -122,8 +122,8 @@ jobs:
 
     - name: List cache
       run: |
-          du -hs ~/.cache/*
-          du -hs ~/.cargo/*
+          du -hs ~/.cache/* || true
+          du -hs ~/.cargo/* || true
 
     - name: Build
       run: |
