--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -117,7 +117,9 @@ jobs:
           ~/.cache/bazel
           ~/.cache/bazelisk
           ~/.cargo
-        key: test4-${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'cargo/Cargo.lock') }}
+          ~/.cargo/bin
+          ~/.cargo/registry
+        key: test5-${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'cargo/Cargo.lock') }}
 
     - name: List cache
       run: |
@@ -130,8 +132,10 @@ jobs:
           echo "====="
           command -v cargo-raze || true
           echo "====="
+          cat ~/.cargo/.crates.toml || true
           ls -l ~/.cargo/bin/ || true
           echo "====="
+          cat /usr/share/rust/.cargo/.crates.toml || true
           ls -l /usr/share/rust/.cargo/bin/ || true
 
     - name: Build
@@ -166,6 +170,8 @@ jobs:
           echo "====="
           command -v cargo-raze || true
           echo "====="
+          cat ~/.cargo/.crates.toml || true
           ls -l ~/.cargo/bin/ || true
           echo "====="
+          cat /usr/share/rust/.cargo/.crates.toml || true
           ls -l /usr/share/rust/.cargo/bin/ || true
