--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -103,3 +103,42 @@ jobs:
 
     - name: Package (publish)
       run: cargo +nightly publish --dry-run --target=wasm32-unknown-unknown
+
+  bazel:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/bazel
+          ~/.cache/bazelisk
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+        key: ${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'cargo/Cargo.lock') }}
+
+    - name: Build
+      run: |
+        bazelisk build //...
+
+    - name: Format (buildifier)
+      run: |
+        GO111MODULE=on go get -u github.com/bazelbuild/buildtools/buildifier@3.4.0
+        export PATH=$PATH:$(go env GOPATH)/bin
+        buildifier -mode=check WORKSPACE
+        buildifier -mode=check BUILD
+        buildifier -mode=check examples/BUILD
+
+    - name: Format (cargo raze)
+      run: |
+        cargo install cargo-raze --version 0.3.8
+        cp -p cargo/Cargo.lock .
+        rm -rf cargo/
+        cargo raze --output=cargo
+        mv Cargo.lock cargo/
+        git diff --exit-code
