--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,32 +41,6 @@ jobs:
         export PATH=$PATH:$(go env GOPATH)/bin
         addlicense -check .
 
-  audit:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Run cargo audit
-      run: |
-        cp -p cargo/Cargo.lock .
-        cargo audit
-
-  outdated:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Run cargo outdated
-      run: cargo outdated --exit-code 1
-
-    - name: Check freshness of cargo/Cargo.lock
-      run: |
-        cargo generate-lockfile
-        mv Cargo.lock cargo/
-        git diff --exit-code
-
   stable:
     runs-on: ubuntu-latest
 
@@ -80,13 +54,13 @@ jobs:
 
     - name: Build
       env:
-        RUSTFLAGS: -C link-args=-S -D warnings
-      run: cargo build --target=wasm32-unknown-unknown --release --all-targets
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Format (clippy)
       env:
-        RUSTFLAGS: -C link-args=-S -D warnings
-      run: cargo clippy --target=wasm32-unknown-unknown --release --all-targets
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -110,28 +84,29 @@ jobs:
       run: |
         rustup toolchain install nightly --component clippy --component rustfmt
         rustup +nightly target add wasm32-unknown-unknown
+        rustup default nightly
 
     - name: Build
       env:
-        RUSTFLAGS: -C link-args=-S -D warnings
-      run: cargo +nightly build --target=wasm32-unknown-unknown --release --all-targets
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Format (clippy)
       env:
-        RUSTFLAGS: -C link-args=-S -D warnings
-      run: cargo +nightly clippy --target=wasm32-unknown-unknown --release --all-targets
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Format (rustfmt)
-      run: cargo +nightly fmt -- --check
+      run: cargo fmt -- --check
 
     - name: Format (manifest)
-      run: cargo +nightly verify-project
+      run: cargo verify-project
 
     - name: Package (docs)
-      run: cargo +nightly doc --no-deps --target=wasm32-unknown-unknown
+      run: cargo doc --no-deps --target=wasm32-unknown-unknown
 
     - name: Package (publish)
-      run: cargo +nightly publish --dry-run --target=wasm32-unknown-unknown
+      run: cargo publish --dry-run --target=wasm32-unknown-unknown
 
   bazel:
     runs-on: ubuntu-latest
@@ -171,3 +146,29 @@ jobs:
         cargo raze --output=cargo
         mv Cargo.lock cargo/
         git diff --exit-code
+
+  outdated:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Run cargo outdated
+      run: cargo outdated --exit-code 1
+
+    - name: Check freshness of cargo/Cargo.lock
+      run: |
+        cargo generate-lockfile
+        mv Cargo.lock cargo/
+        git diff --exit-code
+
+  audit:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Run cargo audit
+      run: |
+        cp -p cargo/Cargo.lock .
+        cargo audit
