review: fix cargo raze workspace path.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ opt-level = 3
 panic = "abort"
 
 [raze]
-workspace_path = "//cargo"
+workspace_path = "//bazel/cargo"
 target = "wasm32-unknown-unknown"
 genmode = "Remote"
 
