--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -57,7 +57,7 @@ jobs:
           ~/.cargo/.crates2.json
           ~/.cargo/bin
           ~/.cargo/registry
-        key: ${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'cargo/Cargo.lock') }}
+        key: ${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'bazel/cargo/Cargo.lock') }}
 
     - name: Build
       run: bazelisk build //...
@@ -73,10 +73,10 @@ jobs:
     - name: Format (cargo raze)
       run: |
         cargo install cargo-raze --version 0.3.8
-        cp -p cargo/Cargo.lock .
-        rm -rf cargo/
-        cargo raze --output=cargo
-        mv Cargo.lock cargo/
+        cp -p bazel/cargo/Cargo.lock .
+        rm -rf bazel/cargo/
+        cargo raze --output=bazel/cargo
+        mv Cargo.lock bazel/cargo/
         git diff --exit-code
 
   stable:
@@ -155,10 +155,10 @@ jobs:
     - name: Run cargo outdated
       run: cargo outdated --exit-code 1
 
-    - name: Check freshness of cargo/Cargo.lock
+    - name: Check freshness of bazel/cargo/Cargo.lock
       run: |
         cargo generate-lockfile
-        mv Cargo.lock cargo/
+        mv Cargo.lock bazel/cargo/
         git diff --exit-code
 
   audit:
@@ -169,5 +169,5 @@ jobs:
 
     - name: Run cargo audit
       run: |
-        cp -p cargo/Cargo.lock .
+        cp -p bazel/cargo/Cargo.lock .
         cargo audit
