--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,16 +89,27 @@ jobs:
       run: |
         rustup toolchain install stable --component clippy --component rustfmt
         rustup target add wasm32-unknown-unknown
+        rustup target add wasm32-wasi
 
-    - name: Build
+    - name: Build (wasm32-unknown-unknown)
       env:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
-    - name: Format (clippy)
+    - name: Clippy (wasm32-unknown-unknown)
       env:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
+
+    - name: Build (wasm32-wasi)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo build --release --all-targets --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -122,17 +133,28 @@ jobs:
       run: |
         rustup toolchain install nightly --component clippy --component rustfmt
         rustup +nightly target add wasm32-unknown-unknown
+        rustup +nightly target add wasm32-wasi
         rustup default nightly
 
-    - name: Build
+    - name: Build (wasm32-unknown-unknown)
       env:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
-    - name: Format (clippy)
+    - name: Clippy (wasm32-unknown-unknown)
       env:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
+
+    - name: Build (wasm32-wasi)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo build --release --all-targets --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
