--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4"
 wee_alloc = { version = "0.4", optional = true }
 
 [features]
-wee_alloc = ["wee_alloc"]
+wee-alloc = ["wee_alloc"]
 
 [dev-dependencies]
 chrono = "0.4"
