--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -106,10 +106,20 @@ jobs:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo build --release --all-targets --target=wasm32-wasi
 
+    - name: Build (wasm32-wasi with wee-alloc)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo build --release --all-targets --target=wasm32-wasi --features=wee-alloc
+
     - name: Clippy (wasm32-wasi)
       env:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo clippy --release --all-targets --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi with wee-alloc))
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo clippy --release --all-targets --target=wasm32-wasi --features=wee-alloc
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -151,10 +161,20 @@ jobs:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo build --release --all-targets --target=wasm32-wasi
 
+    - name: Build (wasm32-wasi with wee-alloc)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo build --release --all-targets --target=wasm32-wasi --features=wee-alloc
+
     - name: Clippy (wasm32-wasi)
       env:
         RUSTFLAGS: -D warnings -C link-args=-S
       run: cargo clippy --release --all-targets --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi with wee-alloc))
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S
+      run: cargo clippy --release --all-targets --target=wasm32-wasi --features=wee-alloc
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
