--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,11 @@ log = "0.4"
 wee_alloc = { version = "0.4", optional = true }
 
 [dev-dependencies]
+cfg-if = "1.0"
 chrono = "0.4"
+
+[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
+getrandom = "0.2"
 
 [profile.release]
 lto = true
