--- a/bazel/cargo/BUILD.bazel
+++ b/bazel/cargo/BUILD.bazel
@@ -1,25 +1,40 @@
 """
-cargo-raze workspace build file.
+@generated
+cargo-raze generated Bazel file.
 
 DO NOT EDIT! Replaced on runs of cargo-raze
 """
+
 package(default_visibility = ["//visibility:public"])
 
 licenses([
-  "notice" # See individual crates for specific licenses
+    "notice",  # See individual crates for specific licenses
 ])
+
+# Aliased targets
 alias(
     name = "chrono",
     actual = "@raze__chrono__0_4_19//:chrono",
-    tags = ["cargo-raze"],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
 )
+
 alias(
     name = "hashbrown",
     actual = "@raze__hashbrown__0_9_1//:hashbrown",
-    tags = ["cargo-raze"],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
 )
+
 alias(
     name = "log",
     actual = "@raze__log__0_4_11//:log",
-    tags = ["cargo-raze"],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
 )
