--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,2 @@
-# Force Bazel to use --target=wasm32-unknown-unknown.
-build --platforms=@io_bazel_rules_rust//rust/platform:wasm
+# Force Bazel to use --target=wasm32-wasi
+build --platforms=@io_bazel_rules_rust//rust/platform:wasi
