Add an example to add custom metrics on proxy wasm
Signed-off-by: Alan Diego dos Santos <alandiegosantos@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,3 +51,8 @@ crate-type = ["cdylib"]
 name = "http_body"
 path = "examples/http_body.rs"
 crate-type = ["cdylib"]
+
+[[example]]
+name = "http_metrics"
+path = "examples/http_metrics.rs"
+crate-type = ["cdylib"]
