--- a/bazel/cargo/remote/BUILD.log-0.4.11.bazel
+++ b/bazel/cargo/remote/BUILD.log-0.4.11.bazel
@@ -28,9 +28,34 @@ licenses([
     "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
-# Generated Targets
+# Generated Targets# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
+cargo_build_script(
+    name = "log_build_script",
+    srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
+    crate_features = [
+    ],
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2015",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.4.11",
+    visibility = ["//visibility:private"],
+    deps = [
+    ],
+)
 
 rust_library(
     name = "log",
@@ -42,7 +67,6 @@ rust_library(
     edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
-        "--cfg=atomic_cas",
     ],
     tags = [
         "cargo-raze",
@@ -51,6 +75,7 @@ rust_library(
     version = "0.4.11",
     # buildifier: leave-alone
     deps = [
+        ":log_build_script",
         "@raze__cfg_if__0_1_10//:cfg_if",
     ],
 )
