--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,3 +60,8 @@ crate-type = ["cdylib"]
 name = "http_body"
 path = "examples/http_body.rs"
 crate-type = ["cdylib"]
+
+[[example]]
+name = "http_config"
+path = "examples/http_config.rs"
+crate-type = ["cdylib"]
