--- a/bazel/cargo/remote/BUILD.wasi-0.10.2+wasi-snapshot-preview1.bazel
+++ b/bazel/cargo/remote/BUILD.wasi-0.10.2+wasi-snapshot-preview1.bazel
@@ -25,15 +25,17 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT OR Apache-2.0"
+    "notice",  # Apache-2.0 from expression "Apache-2.0 OR (Apache-2.0 OR MIT)"
 ])
 
 # Generated Targets
 
 rust_library(
-    name = "cfg_if",
+    name = "wasi",
     srcs = glob(["**/*.rs"]),
     crate_features = [
+        "default",
+        "std",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
@@ -45,10 +47,8 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.1.10",
+    version = "0.10.2+wasi-snapshot-preview1",
     # buildifier: leave-alone
     deps = [
     ],
 )
-
-# Unsupported target "xcrate" with type "test" omitted
