--- a/bazel/cargo/remote/BUILD.ahash-0.4.7.bazel
+++ b/bazel/cargo/remote/BUILD.ahash-0.4.7.bazel
@@ -28,43 +28,20 @@ licenses([
     "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
-# Generated Targets# buildifier: disable=load-on-top
-load(
-    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
-    "cargo_build_script",
-)
+# Generated Targets
 
-cargo_build_script(
-    name = "log_build_script",
-    srcs = glob(["**/*.rs"]),
-    build_script_env = {
-    },
-    crate_features = [
-    ],
-    crate_root = "build.rs",
-    data = glob(["**"]),
-    edition = "2015",
-    rustc_flags = [
-        "--cap-lints=allow",
-    ],
-    tags = [
-        "cargo-raze",
-        "manual",
-    ],
-    version = "0.4.11",
-    visibility = ["//visibility:private"],
-    deps = [
-    ],
-)
+# Unsupported target "ahash" with type "bench" omitted
+
+# Unsupported target "map" with type "bench" omitted
 
 rust_library(
-    name = "log",
+    name = "ahash",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -72,14 +49,14 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.4.11",
+    version = "0.4.7",
     # buildifier: leave-alone
     deps = [
-        ":log_build_script",
-        "@raze__cfg_if__0_1_10//:cfg_if",
     ],
 )
 
-# Unsupported target "filters" with type "test" omitted
+# Unsupported target "bench" with type "test" omitted
 
-# Unsupported target "macros" with type "test" omitted
+# Unsupported target "map_tests" with type "test" omitted
+
+# Unsupported target "nopanic" with type "test" omitted
