--- a/bazel/cargo/remote/BUILD.libc-0.2.85.bazel
+++ b/bazel/cargo/remote/BUILD.libc-0.2.85.bazel
@@ -25,21 +25,27 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # Apache-2.0 from expression "Apache-2.0 OR (Apache-2.0 OR MIT)"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
-# Generated Targets
+# Generated Targets# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-rust_library(
-    name = "wasi",
+cargo_build_script(
+    name = "libc_build_script",
     srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
     crate_features = [
         "default",
         "std",
     ],
-    crate_root = "src/lib.rs",
-    crate_type = "lib",
-    edition = "2018",
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -47,8 +53,34 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.10.0+wasi-snapshot-preview1",
-    # buildifier: leave-alone
+    version = "0.2.85",
+    visibility = ["//visibility:private"],
     deps = [
     ],
 )
+
+rust_library(
+    name = "libc",
+    srcs = glob(["**/*.rs"]),
+    crate_features = [
+        "default",
+        "std",
+    ],
+    crate_root = "src/lib.rs",
+    crate_type = "lib",
+    edition = "2015",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.2.85",
+    # buildifier: leave-alone
+    deps = [
+        ":libc_build_script",
+    ],
+)
+
+# Unsupported target "const_fn" with type "test" omitted
