--- a/bazel/cargo/remote/BUILD.log-0.4.14.bazel
+++ b/bazel/cargo/remote/BUILD.log-0.4.14.bazel
@@ -28,20 +28,22 @@ licenses([
     "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
-# Generated Targets
+# Generated Targets# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-# Unsupported target "ahash" with type "bench" omitted
-
-# Unsupported target "map" with type "bench" omitted
-
-rust_library(
-    name = "ahash",
+cargo_build_script(
+    name = "log_build_script",
     srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
     crate_features = [
     ],
-    crate_root = "src/lib.rs",
-    crate_type = "lib",
-    edition = "2018",
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -49,14 +51,37 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.4.6",
-    # buildifier: leave-alone
+    version = "0.4.14",
+    visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
-# Unsupported target "bench" with type "test" omitted
+# Unsupported target "value" with type "bench" omitted
 
-# Unsupported target "map_tests" with type "test" omitted
+rust_library(
+    name = "log",
+    srcs = glob(["**/*.rs"]),
+    crate_features = [
+    ],
+    crate_root = "src/lib.rs",
+    crate_type = "lib",
+    edition = "2015",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.4.14",
+    # buildifier: leave-alone
+    deps = [
+        ":log_build_script",
+        "@raze__cfg_if__1_0_0//:cfg_if",
+    ],
+)
 
-# Unsupported target "nopanic" with type "test" omitted
+# Unsupported target "filters" with type "test" omitted
+
+# Unsupported target "macros" with type "test" omitted
