--- a/bazel/cargo/remote/BUILD.time-0.1.43.bazel
+++ b/bazel/cargo/remote/BUILD.time-0.1.43.bazel
@@ -25,21 +25,21 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # Apache-2.0 from expression "Apache-2.0 OR (Apache-2.0 OR MIT)"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
 rust_library(
-    name = "wasi",
+    name = "time",
     srcs = glob(["**/*.rs"]),
+    aliases = {
+    },
     crate_features = [
-        "default",
-        "std",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2018",
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -47,8 +47,18 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.9.0+wasi-snapshot-preview1",
+    version = "0.1.43",
     # buildifier: leave-alone
     deps = [
-    ],
+        "@raze__libc__0_2_85//:libc",
+    ] + selects.with_or({
+        # cfg(windows)
+        (
+            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
+            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
+        ): [
+            "@raze__winapi__0_3_9//:winapi",
+        ],
+        "//conditions:default": [],
+    }),
 )
