--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -198,7 +198,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run cargo outdated
-      run: cargo outdated --exit-code 1
+      run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Check freshness of bazel/cargo/Cargo.lock
       run: |
