Update cargo-raze to v0.9.2.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,11 +75,9 @@ jobs:
 
     - name: Format (cargo raze)
       run: |
-        cargo install cargo-raze --version 0.7.0
-        cp -p bazel/cargo/Cargo.lock .
         rm -rf bazel/cargo/
-        cargo raze --output=bazel/cargo
-        mv Cargo.lock bazel/cargo/
+        cargo install cargo-raze --version 0.9.2
+        cargo raze --generate-lockfile --output=bazel/cargo
         git diff --exit-code
 
   stable:
@@ -199,12 +197,6 @@ jobs:
 
     - name: Run cargo outdated
       run: cargo outdated --root-deps-only --exit-code 1
-
-    - name: Check freshness of bazel/cargo/Cargo.lock
-      run: |
-        cargo generate-lockfile
-        mv Cargo.lock bazel/cargo/
-        git diff --exit-code
 
   audit:
     runs-on: ubuntu-latest
