--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,17 +29,9 @@ opt-level = 3
 panic = "abort"
 
 [package.metadata.raze]
+package_aliases_dir = "bazel/cargo"
 workspace_path = "//bazel/cargo"
 genmode = "Remote"
-
-[package.metadata.raze.crates.getrandom.'=0.2.2']
-gen_buildrs = true
-
-[package.metadata.raze.crates.libc.'=0.2.85']
-gen_buildrs = true
-
-[package.metadata.raze.crates.log.'=0.4.14']
-gen_buildrs = true
 
 [[example]]
 name = "hello_world"
