--- a/bazel/cargo/remote/BUILD.getrandom-0.2.2.bazel
+++ b/bazel/cargo/remote/BUILD.getrandom-0.2.2.bazel
@@ -28,7 +28,8 @@ licenses([
     "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
-# Generated Targets# buildifier: disable=load-on-top
+# Generated Targets
+# buildifier: disable=load-on-top
 load(
     "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
     "cargo_build_script",
@@ -71,6 +72,7 @@ cargo_build_script(
     }) + selects.with_or({
         # cfg(unix)
         (
+            "@io_bazel_rules_rust//rust/platform:aarch64-apple-darwin",
             "@io_bazel_rules_rust//rust/platform:aarch64-apple-ios",
             "@io_bazel_rules_rust//rust/platform:aarch64-linux-android",
             "@io_bazel_rules_rust//rust/platform:aarch64-unknown-linux-gnu",
@@ -103,6 +105,7 @@ rust_library(
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
+    data = [],
     edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
@@ -134,6 +137,7 @@ rust_library(
     }) + selects.with_or({
         # cfg(unix)
         (
+            "@io_bazel_rules_rust//rust/platform:aarch64-apple-darwin",
             "@io_bazel_rules_rust//rust/platform:aarch64-apple-ios",
             "@io_bazel_rules_rust//rust/platform:aarch64-linux-android",
             "@io_bazel_rules_rust//rust/platform:aarch64-unknown-linux-gnu",
