--- a/bazel/cargo/remote/BUILD.winapi-0.3.9.bazel
+++ b/bazel/cargo/remote/BUILD.winapi-0.3.9.bazel
@@ -29,8 +29,41 @@ licenses([
 ])
 
 # Generated Targets
+# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
+cargo_build_script(
+    name = "winapi_build_script",
+    srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
+    crate_features = [
+        "minwinbase",
+        "minwindef",
+        "ntdef",
+        "profileapi",
+        "std",
+        "sysinfoapi",
+        "timezoneapi",
+    ],
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2015",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.3.9",
+    visibility = ["//visibility:private"],
+    deps = [
+    ],
+)
 
 rust_library(
     name = "winapi",
@@ -46,6 +79,7 @@ rust_library(
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
+    data = [],
     edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
@@ -57,5 +91,6 @@ rust_library(
     version = "0.3.9",
     # buildifier: leave-alone
     deps = [
+        ":winapi_build_script",
     ],
 )
